# mysibsau-session-telegram-bot

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci_cd.yaml
docker/bot/: Dockerfile
session-timetable/: .env.example  Cargo.toml
session-timetable/src/: helpers.rs  main.rs  msg_templates.rs  pallada_service.rs  schemas.rs
src/: main.py
src/constants/: __init__.py  credentials.py  messages.py  statuses.py
src/service/: __init__.py  session.py
